src/Teams/Teams.module.css
.codeinput {
  width: 100%;
  text-align: center;
  margin: 4px;
}

.team {
  display: flex;
  gap: 4px;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.beastie {
  composes: animBoxBackground from global;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 8px;
  color: black;
}

.row {
  display: flex;
  flex: 1 0 0;
  justify-content: space-evenly;
}

.moverow {
  composes: row;
  align-items: end;
}

.column {
  display: flex;
  flex-direction: column;
  text-align: center;
  width: 180px;
}

.number {
  font-size: 62.5%;
  font-family: var(--sports-jersey);
  color: #808080;
}

.beastieImg {
  width: 160px;
  aspect-ratio: 1;
  object-fit: contain;
  margin: 10px;
}

.statDist {
  display: flex;
  flex-direction: column;
  max-width: 100%;
  width: 180px;
}

.statRow {
  display: flex;
  justify-content: space-evenly;
}

.statRow > div {
  min-width: 16px;
  flex: 1 0;
  text-align: center;
  line-height: 1.7em;
  position: relative;
}

.statBar {
  composes: animPageHeaderBackground from global;
  flex: 2 0;
}

.barCol {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background-color: var(--type-col);
}

.barColRight {
  composes: barCol;
  left: auto;
  right: 0;
}

.barImg {
  height: 1.7em;
}

.barText {
  position: absolute;
  top: 3px;
  left: 0;
  width: 100%;
  height: 100%;
  font-family: var(--sports-jersey);
  font-size: 1.2em;
  /* -webkit-text-stroke: 0.5px var(--type-col); */
  text-shadow:
    -1px -1px 0 var(--type-col),
    1px 1px 0 var(--type-col),
    1px -1px 0 var(--type-col),
    -1px 1px 0 var(--type-col);
}

.ability {
  font-size: 0.9em;
  color: darkslategray;
}

.move {
  display: flex;
  width: 100px;
  background-color: var(--move-color);
  height: 2em;
  line-height: 0.9em;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  cursor: pointer;
  margin-bottom: 4px;
}

.moveblock {
  height: 100%;
  width: 20px;
  background-image: linear-gradient(var(--move-color), var(--move-color)),
    var(--move-url), linear-gradient(black, black);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  background-blend-mode: multiply, normal;
}

